# cflr.dev

./: .gitignore  LICENSE.md  README.md  pyproject.toml
.github/workflows/: publish-pypi.yml
cflr/: __main__.py  cli.py  sso.py
cli/: README.md  pyproject.toml
docs/: index.html
